[gd_scene load_steps=16 format=2]

[ext_resource path="res://system/components/theme_property_applier.gd" type="Script" id=1]
[ext_resource path="res://modules/default/welcome_setup/welcome_setup.gd" type="Script" id=2]
[ext_resource path="res://modules/default/welcome_setup/welcome_step.gd" type="Script" id=3]
[ext_resource path="res://modules/default/welcome_setup/language_selection_step.gd" type="Script" id=4]
[ext_resource path="res://modules/default/welcome_setup/input_mapping_step.gd" type="Script" id=5]
[ext_resource path="res://system/components/large_label.tscn" type="PackedScene" id=6]
[ext_resource path="res://modules/default/welcome_setup/configuration.gd" type="Script" id=7]
[ext_resource path="res://system/components/scroll_container.tscn" type="PackedScene" id=8]
[ext_resource path="res://system/components/modulate_applier.gd" type="Script" id=9]
[ext_resource path="res://modules/default/welcome_setup/press_button_animation.png" type="Texture" id=10]
[ext_resource path="res://modules/default/welcome_setup/input_verification_step.gd" type="Script" id=11]
[ext_resource path="res://modules/default/welcome_setup/setup_completed_step.gd" type="Script" id=12]
[ext_resource path="res://modules/default/welcome_setup/press_button_animation.tres" type="Animation" id=13]
[ext_resource path="res://system/components/constraint_container.gd" type="Script" id=14]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 36, 36 )

[node name="WelcomeSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConstraintContainer" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
constraint_width = true

[node name="WelcomeView" type="CenterContainer" parent="ConstraintContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="ConstraintContainer/WelcomeView"]
margin_left = 160.0
margin_top = 120.0
margin_right = 160.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ConstraintContainer/WelcomeView/Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -80.0
margin_right = 144.0
margin_bottom = 80.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Welcome" type="Label" parent="ConstraintContainer/WelcomeView/Center/VBoxContainer"]
margin_right = 288.0
margin_bottom = 120.0
rect_min_size = Vector2( 288, 120 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Welcome"
align = 1
valign = 1
autowrap = true
script = ExtResource( 1 )
font_values = {
"font": "xxlarge"
}

[node name="ButtonPress" type="TextureRect" parent="ConstraintContainer/WelcomeView/Center/VBoxContainer"]
margin_top = 124.0
margin_right = 288.0
margin_bottom = 160.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConstraintContainer/WelcomeView/Center/VBoxContainer/ButtonPress"]
autoplay = "press_button_animation"
anims/press_button_animation = ExtResource( 13 )

[node name="ModulateApplier" type="Node" parent="ConstraintContainer/WelcomeView/Center/VBoxContainer/ButtonPress"]
script = ExtResource( 9 )
apply_to = NodePath("..")
color_property = "contrast"

[node name="Tween" type="Tween" parent="ConstraintContainer/WelcomeView"]

[node name="Configuration" type="VBoxContainer" parent="ConstraintContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="MarginContainer" parent="ConstraintContainer/Configuration"]
margin_right = 320.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LargeLabel" parent="ConstraintContainer/Configuration/Header" instance=ExtResource( 6 )]
margin_right = 320.0
grow_horizontal = 2
size_flags_horizontal = 3
text = "Configuration"
align = 1
valign = 1
autowrap = true
font_values = {
"font": "xlarge"
}

[node name="StepIndex" type="MarginContainer" parent="ConstraintContainer/Configuration"]
margin_top = 18.0
margin_right = 320.0
margin_bottom = 18.0
custom_constants/margin_top = 0
custom_constants/margin_bottom = 0

[node name="StepPanelsContainer" type="HBoxContainer" parent="ConstraintContainer/Configuration/StepIndex"]
margin_right = 320.0
alignment = 1

[node name="StepHighlighter" type="Control" parent="ConstraintContainer/Configuration/StepIndex"]
margin_right = 320.0

[node name="Highlighter" type="Panel" parent="ConstraintContainer/Configuration/StepIndex/StepHighlighter"]
margin_bottom = 6.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
stylebox_values = {
"panel": "highlighter"
}

[node name="Steps" type="MarginContainer" parent="ConstraintContainer/Configuration"]
margin_top = 22.0
margin_right = 320.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMapper" type="MarginContainer" parent="ConstraintContainer/Configuration/Steps"]
visible = false
margin_right = 320.0
margin_bottom = 218.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" parent="ConstraintContainer/Configuration/Steps/InputMapper" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ConstraintContainer/Configuration/Steps/InputMapper/ScrollContainer"]
margin_right = 320.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputVerification" type="MarginContainer" parent="ConstraintContainer/Configuration/Steps"]
visible = false
margin_right = 320.0
margin_bottom = 218.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="ConstraintContainer/Configuration/Steps/InputVerification"]
margin_right = 320.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ButtonsIcons" type="HBoxContainer" parent="ConstraintContainer/Configuration/Steps/InputVerification/CenterContainer"]
margin_top = 98.0
margin_right = 320.0
margin_bottom = 98.0
size_flags_horizontal = 3
alignment = 1

[node name="IndexContainer" type="Control" parent="ConstraintContainer/Configuration/Steps/InputVerification/CenterContainer"]
margin_top = 102.0
margin_right = 320.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 18 )

[node name="Index" type="VBoxContainer" parent="ConstraintContainer/Configuration/Steps/InputVerification/CenterContainer/IndexContainer"]
margin_left = 117.865
margin_right = 135.865
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPress" type="TextureRect" parent="ConstraintContainer/Configuration/Steps/InputVerification/CenterContainer/IndexContainer/Index"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
size_flags_horizontal = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConstraintContainer/Configuration/Steps/InputVerification/CenterContainer/IndexContainer/Index/ButtonPress"]
autoplay = "press_button_animation"
anims/press_button_animation = ExtResource( 13 )

[node name="ModulateApplier" type="Node" parent="ConstraintContainer/Configuration/Steps/InputVerification/CenterContainer/IndexContainer/Index/ButtonPress"]
script = ExtResource( 9 )
apply_to = NodePath("..")
color_property = "contrast"

[node name="Tween" type="Tween" parent="ConstraintContainer/Configuration/Steps/InputVerification"]

[node name="LanguageSelector" type="MarginContainer" parent="ConstraintContainer/Configuration/Steps"]
visible = false
margin_right = 320.0
margin_bottom = 218.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" parent="ConstraintContainer/Configuration/Steps/LanguageSelector" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ConstraintContainer/Configuration/Steps/LanguageSelector/ScrollContainer"]
margin_right = 320.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SetupCompleted" type="CenterContainer" parent="ConstraintContainer/Configuration/Steps"]
visible = false
margin_right = 320.0
margin_bottom = 218.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="Control" parent="ConstraintContainer/Configuration/Steps/SetupCompleted"]
margin_left = 160.0
margin_top = 109.0
margin_right = 160.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ConstraintContainer/Configuration/Steps/SetupCompleted/Center"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -80.0
margin_right = 144.0
margin_bottom = 80.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetupCompleted" type="Label" parent="ConstraintContainer/Configuration/Steps/SetupCompleted/Center/VBoxContainer"]
margin_right = 288.0
margin_bottom = 120.0
rect_min_size = Vector2( 288, 120 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "DEFAULT.SETUP_COMPLETED"
align = 1
valign = 1
autowrap = true
script = ExtResource( 1 )
font_values = {
"font": "xlarge"
}
constant_values = {

}
color_values = {

}
stylebox_values = {

}
texture_values = {

}

[node name="ButtonPress" type="TextureRect" parent="ConstraintContainer/Configuration/Steps/SetupCompleted/Center/VBoxContainer"]
margin_top = 124.0
margin_right = 288.0
margin_bottom = 160.0
rect_min_size = Vector2( 36, 36 )
size_flags_horizontal = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ConstraintContainer/Configuration/Steps/SetupCompleted/Center/VBoxContainer/ButtonPress"]
autoplay = "press_button_animation"
anims/press_button_animation = ExtResource( 13 )

[node name="ModulateApplier" type="Node" parent="ConstraintContainer/Configuration/Steps/SetupCompleted/Center/VBoxContainer/ButtonPress"]
script = ExtResource( 9 )
apply_to = NodePath("..")
color_property = "contrast"

[node name="Tween" type="Tween" parent="ConstraintContainer/Configuration"]

[node name="Tween" type="Tween" parent="."]
